; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_colocation_utils.c_CheckReplicationModel.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_colocation_utils.c_CheckReplicationModel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8 }

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"cannot colocate tables %s and %s\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"Replication models don't match for %s and %s.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CheckReplicationModel(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i8, align 1
  %8 = alloca i8, align 1
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %5, align 8
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %6, align 8
  store i8 0, i8* %7, align 1
  store i8 0, i8* %8, align 1
  %11 = load i32, i32* %3, align 4
  %12 = call %struct.TYPE_3__* @DistributedTableCacheEntry(i32 %11)
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %5, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i8, i8* %14, align 1
  store i8 %15, i8* %7, align 1
  %16 = load i32, i32* %4, align 4
  %17 = call %struct.TYPE_3__* @DistributedTableCacheEntry(i32 %16)
  store %struct.TYPE_3__* %17, %struct.TYPE_3__** %6, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i8, i8* %19, align 1
  store i8 %20, i8* %8, align 1
  %21 = load i8, i8* %7, align 1
  %22 = sext i8 %21 to i32
  %23 = load i8, i8* %8, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp ne i32 %22, %24
  br i1 %25, label %26, label %39

26:                                               ; preds = %2
  %27 = load i32, i32* %3, align 4
  %28 = call i8* @get_rel_name(i32 %27)
  store i8* %28, i8** %9, align 8
  %29 = load i32, i32* %4, align 4
  %30 = call i8* @get_rel_name(i32 %29)
  store i8* %30, i8** %10, align 8
  %31 = load i32, i32* @ERROR, align 4
  %32 = load i8*, i8** %9, align 8
  %33 = load i8*, i8** %10, align 8
  %34 = call i32 @errmsg(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i8* %32, i8* %33)
  %35 = load i8*, i8** %9, align 8
  %36 = load i8*, i8** %10, align 8
  %37 = call i32 @errdetail(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i8* %35, i8* %36)
  %38 = call i32 @ereport(i32 %31, i32 %37)
  br label %39

39:                                               ; preds = %26, %2
  ret void
}

declare dso_local %struct.TYPE_3__* @DistributedTableCacheEntry(i32) #1

declare dso_local i8* @get_rel_name(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i8*, i8*) #1

declare dso_local i32 @errdetail(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
